fix: changed file architecture to match standards