@@ -1,18 +1,20 @@
-package models.Sections;
+package com.calcmadeeasy.models.Chapters;
 
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.UUID;
 
-import models.Pages.Page;
+import com.calcmadeeasy.models.Sections.Section;
 
-public class Section {
+
+
+public class Chapter {
   private final UUID id;
   private String description;
   private String title;
-  private List<Page> pages;
+  private List<Section> sections;
   private Instant createdAt;
   private Instant updatedAt;
 
@@ -20,7 +22,7 @@ public class Section {
     private UUID id;
     private String description;
     private String title;
-    private List<Page> pages;
+    private List<Section> sections;
     private Instant createdAt;
 
     public Builder id(UUID id) {
@@ -38,8 +40,8 @@ public class Section {
       return this;
     }
 
-    public Builder pages(Page... pages) {
-      this.pages = List.of(pages);
+    public Builder sections(Section... sections) {
+      this.sections = Arrays.asList(sections);
       return this;
     }
 
@@ -48,18 +50,22 @@ public class Section {
       return this;
     }
 
-    public Section build() {
-      return new Section(this);
+    public Chapter build() {
+      return new Chapter(this);
     }
   }
 
-  private Section(Builder b) {
+  private Chapter(Builder b) {
     this.id = b.id == null ? UUID.randomUUID() : b.id;
     this.description = b.description;
     this.title = b.title;
-    this.pages = b.pages == null ? new ArrayList<>() : new ArrayList<>(b.pages);
+    this.sections = b.sections == null ? new ArrayList<Section>() : new ArrayList<Section>(b.sections);
     this.createdAt = b.createdAt == null ? Instant.now() : b.createdAt;
     this.updatedAt = this.createdAt;
+  }
+
+  public void touch() {
+    this.updatedAt = Instant.now();
   }
 
   // Getters
@@ -75,28 +81,19 @@ public class Section {
     return title;
   }
 
-  public int getPageQuantity() {
-    return pages.size();
-  }
-
-  public List<Page> getPages() {
-    return pages;
-  }
-
-  public Instant getUpdatedAt() {
-    return updatedAt;
+  public List<Section> getSections() {
+    return sections;
   }
 
   public Instant getCreatedAt() {
     return createdAt;
   }
 
-  public void touch() {
-    this.updatedAt = Instant.now();
+  public Instant getUpdatedAt() {
+    return updatedAt;
   }
 
   // Setters
-
   public void setDescription(String newDescription) {
     this.description = newDescription;
     touch();
@@ -107,45 +104,44 @@ public class Section {
     touch();
   }
 
-  public void setPage(Page newPage) {
-    this.pages.add(Objects.requireNonNull(newPage));
-    touch();
+  // Can either add one or more sections as once.
+  public void setSections(Section... newSection) {
+    if (newSection == null)
+      System.out.println("Cannot add a null or empty section");
+    else
+      for(Section s : newSection) this.sections.add(s);
   }
 
-  public void setPageList(Page... newPages) {
-    this.pages = new ArrayList<Page>();
-    for (Page p : newPages) this.pages.add(p);
-    touch();
+  // Fully replaces section list with new sections. 
+  public void setSectionList(Section... newSections) {
+    this.sections = new ArrayList<Section>();  // Wipes out old data
+    for (Section s : newSections)
+      this.sections.add(s);
   }
 
   // Removers
-
-  public void removePageById(UUID id) {
-    if (pages.isEmpty() || pages == null)
-      System.out.println("No pages in this section.");
-    for (Page p : this.pages) {
-      if (p.getId().equals(id)) {
-        pages.remove(p);
-        System.out.println("Removed " + p.toString() + "\nfrom pages list");
-        return;
-      }
+  public void removeSectionById(UUID id) {
+    for (Section s : this.sections) {
+      if (s.getId() == id) {
+        this.sections.remove(s);
+        System.out.println("Removed " + s + " from section list");
+      } else
+        System.out.println("No section was found in the list");
+      return;
     }
-    touch();
   }
 
-  @Override
   public String toString() {
-    return "\nSection{" +
+    return "\nChapter{\n" +
         "id=" + id +
         ", description=" + description +
-        ", title=" + title +
-        ", pageQuantity=" + pages.size() +
-        ", updatedAt=" + updatedAt +
+        ", sectionsQuantity=" + sections.size() +
         ", createdAt=" + createdAt +
-        '}';
+        ", updatedAt=" + updatedAt +
+        "\n}";
   }
 
-  // Allows for simplicity when creating a new Section object
+  // Allows for simplicity when creating a new Chapter object
   public static Builder builder() {
     return new Builder();
   }
